--- a/digicubes_flask/web/templates/admin/school.jinja
+++ b/digicubes_flask/web/templates/admin/school.jinja
@@ -5,7 +5,7 @@ School
 {% endblock %}
 
 {% block main_menu %}
-    <li><a href="{{ url_for('account.home') }}">Home</a></li>
+    <li><a href="{{ url_for('account.home') }}">Back Home</a></li>
     <li>
         <a href="{{ url_for('admin.update_school', school_id=school.id) }}">Edit Scool</a>
     </li>
