--- a/digicubes_flask/web/templates/admin/school.jinja
+++ b/digicubes_flask/web/templates/admin/school.jinja
@@ -4,7 +4,7 @@
 School
 {% endblock %}
 
-{% block main_menu %}
+{% block main_menu_old %}
     <li><a href="{{ url_for('account.home') }}">Back Home</a></li>
     <li>
         <a href="{{ url_for('admin.update_school', school_id=school.id) }}">Edit Scool</a>
@@ -19,6 +19,13 @@ School
 
 {% block main_content %}
 <div class="section">
+    <div class="row">
+        <div class="col s12 dc-menu">
+            <a class="dc-menu-item" href="{{ url_for('admin.update_school', school_id=school.id) }}">Edit School</a>
+            <a class="dc-menu-item" href="{{ url_for('admin.create_school_course', school_id=school.id) }}">New Course</a>
+            <a class="dc-menu-item" href="#">Add Teacher</a>
+        </div>
+    </div>
     <div class="row">
         <div class="col s12">
             <h1>{{ school.name | nonefilter }}</h1>
