--- a/digicubes_flask/web/templates/admin/schools.jinja
+++ b/digicubes_flask/web/templates/admin/schools.jinja
@@ -13,7 +13,15 @@ Schools Overview
 {% block main_content %}
 <div class="section">
     <div class="row">
-        <h2>All Schools</h2>
+        <div class="col s12 dc-menu">
+            <a class="dc-menu-item" href="{{url_for('admin.create_school')}}">New School</a>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col s12">
+            <h2>All Schools</h2>
+        </div>
     </div>
     {% if schools %}
     <table class="highlight">
