--- a/digicubes_flask/web/templates/page_base.jinja
+++ b/digicubes_flask/web/templates/page_base.jinja
@@ -18,7 +18,7 @@
         <header>
             <nav class="fixed-nav light-blue " role="navigation">
                 <div class="nav-wrapper container">
-                    <object id="front-page-logo" type="image/svg+xml" data="{{ url_for('static', filename='image/DigiCubes_Kontur.svg') }}">Your browser does not support SVG</object>
+                    <!--object id="front-page-logo" type="image/svg+xml" data="{{ url_for('static', filename='image/DigiCubes_Kontur.svg') }}">Your browser does not support SVG</object-->
                     <span class="brand-logo dc-brand">{% block space_name %}{% endblock %}</span>
                     <ul class="right hide-on-med-and-down">
                         {% block main_menu %}{% endblock %}
@@ -39,9 +39,9 @@
         </main>
         {% block after_main_content %}{% endblock %}
         <!--JavaScript at end of body for optimized loading-->
-        <script type="text/javascript" src="{{ url_for('static', filename='js/materialize.min.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.4.1.slim.min.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static', filename='js/digicubes.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/materialize.min.js') }}"></script>
         <script type="text/javascript">
             $(function() {
                 M.AutoInit();
