--- a/digicubes_flask/web/templates/admin/users.jinja
+++ b/digicubes_flask/web/templates/admin/users.jinja
@@ -51,7 +51,7 @@ Users Overview
 <div class="section">
     <div class="row">
         <div class="col s12 dc-menu">
-            <a class="dc-menu-item" href="{{url_for('admin.create_user')}}">>New User</a>
+            <a class="dc-menu-item" href="{{url_for('admin.create_user')}}">New User</a>
         </div>
     </div>
     <div class="row">
