--- a/digicubes_flask/web/templates/admin/school.jinja
+++ b/digicubes_flask/web/templates/admin/school.jinja
@@ -8,13 +8,13 @@ School
 {% block main_menu_old %}
     <li><a href="{{ url_for('account.home') }}">Back Home</a></li>
     <li>
-        <a href="{{ url_for('admin.update_school', school_id=school.id) }}">Edit Scool</a>
+        <a href="{{ url_for('school.update', school_id=school.id) }}">Edit Scool</a>
     </li>
     <li>
         <a href="{{ url_for('admin.create_school_course', school_id=school.id) }}">New Course</a>
     </li>
     <li>
-        <a href="{{ url_for('admin.delete_school', school_id=school.id) }}">Delete School</a>
+        <a href="{{ url_for('school.delete', school_id=school.id) }}">Delete School</a>
     </li>
 {% endblock %}
 
@@ -22,10 +22,10 @@ School
 <div class="section">
     <div class="row">
         <div class="col s12 dc-menu">
-            <a class="dc-menu-item" href="{{ url_for('admin.update_school', school_id=school.id) }}">Edit School</a>
+            <a class="dc-menu-item" href="{{ url_for('school.update', school_id=school.id) }}">Edit School</a>
             <a class="dc-menu-item" href="{{ url_for('admin.create_school_course', school_id=school.id) }}">New Course</a>
             <a class="dc-menu-item" href="#">Add Teacher</a>
-            <a class="dc-menu-item" href="{{ url_for('admin.delete_school', school_id=school.id) }}">Delete School</a>
+            <a class="dc-menu-item" href="{{ url_for('school.delete', school_id=school.id) }}">Delete School</a>
         </div>
     </div>
     <div class="row">
