--- a/digicubes_flask/web/templates/unit/unit.jinja
+++ b/digicubes_flask/web/templates/unit/unit.jinja
@@ -8,10 +8,9 @@
 <div class="section">
   <div class="row">
     <div class="col s12 dc-menu">
-      <a class="dc-menu-item" href="{{ url_for('admin.school', school_id=school.id) }}">{{  school.name }}</a>            
+      <a class="dc-menu-item" href="{{ url_for('school.get', school_id=school.id) }}">{{ school.name }}</a>            
       <a href="{{ url_for('admin.display_school_course', school_id=school.id, course_id=course.id) }}">{{ course.name | nonefilter }}</a>
       <a href="{{ url_for('unit.update', school_id=school.id, course_id=course.id, unit_id=unit.id) }}">Edit</a>
-
     </div>
   </div>
 
