--- a/digicubes_flask/web/templates/admin/update_course.jinja
+++ b/digicubes_flask/web/templates/admin/update_course.jinja
@@ -16,7 +16,7 @@ Edit Course for school {{ school.name }}
 
 {% block sub_menu %}
     <li>
-        <a href="{{url_for('admin.school', school_id=school.id)}}">Back</a>
+        <a href="{{url_for('school.get', school_id=school.id)}}">Back</a>
     </li>
 {% endblock %}
 
@@ -24,7 +24,7 @@ Edit Course for school {{ school.name }}
 <div class="section">
     <div class="row">
         <div class="col s12 dc-menu">
-            <a class="dc-menu-item" href="{{ url_for('admin.school', school_id=school.id) }}">Back to {{  school.name }}</a>
+            <a class="dc-menu-item" href="{{ url_for('school.get', school_id=school.id) }}">Back to {{  school.name }}</a>
             <a class="dc-menu-item" href="{{ url_for('admin.display_school_course', school_id=school.id, course_id=course.id) }}">Cancel</a>
         </div>
     </div>
