--- a/digicubes_flask/web/templates/unit/update.jinja
+++ b/digicubes_flask/web/templates/unit/update.jinja
@@ -9,7 +9,7 @@
 <div class="section">
     <div class="row">
         <div class="col s12 dc-menu">
-            <a class="dc-menu-item" href="{{ url_for('unit.display_course_unit', school_id=school.id, course_id=course.id, unit_id=unit.id) }}">Back</a>            
+            <a class="dc-menu-item" href="{{ url_for('unit.get', school_id=school.id, course_id=course.id, unit_id=unit.id) }}">Back</a>            
         </div>
     </div>
 
