--- a/digicubes_flask/web/templates/admin/school.jinja
+++ b/digicubes_flask/web/templates/admin/school.jinja
@@ -11,7 +11,7 @@ School
         <a href="{{ url_for('school.update', school_id=school.id) }}">Edit Scool</a>
     </li>
     <li>
-        <a href="{{ url_for('admin.create_school_course', school_id=school.id) }}">New Course</a>
+        <a href="{{ url_for('course.create', school_id=school.id) }}">New Course</a>
     </li>
     <li>
         <a href="{{ url_for('school.delete', school_id=school.id) }}">Delete School</a>
@@ -23,7 +23,7 @@ School
     <div class="row">
         <div class="col s12 dc-menu">
             <a class="dc-menu-item" href="{{ url_for('school.update', school_id=school.id) }}">Edit School</a>
-            <a class="dc-menu-item" href="{{ url_for('admin.create_school_course', school_id=school.id) }}">New Course</a>
+            <a class="dc-menu-item" href="{{ url_for('course.create', school_id=school.id) }}">New Course</a>
             <a class="dc-menu-item" href="#">Add Teacher</a>
             <a class="dc-menu-item" href="{{ url_for('school.delete', school_id=school.id) }}">Delete School</a>
         </div>
@@ -53,13 +53,13 @@ School
                 <tbody class="dc-vtop">
             {% for course in courses %}
                 <tr>
-                    <td><a href="{{ url_for('admin.display_school_course', school_id=school.id, course_id=course.id) }}">{{ course.name | nonefilter }}</a></td>
+                    <td><a href="{{ url_for('course.get', school_id=school.id, course_id=course.id) }}">{{ course.name | nonefilter }}</a></td>
                     <td class="dc-md">{{ course.description | md }}</td>
                     <td>{{ course.from_date | digidate }}</td>
                     <td>{{ course.until_date | digidate }}</td>
                     <td>{{ course.created_at | digidate }}</td> 
                     <td class="right-align dc-icon-column">
-                        <a href="{{ url_for('admin.delete_course', school_id=school.id, course_id=course.id) }}">
+                        <a href="{{ url_for('course.delete', school_id=school.id, course_id=course.id) }}">
                             <i class="material-icons red-text text-darken-3">delete</i>
                         </a>
                     </td>
@@ -69,7 +69,7 @@ School
                 </tbody>
             </table>
             {% else %}
-            <a href="{{ url_for('admin.create_school_course', school_id=school.id) }}" class="waves-effect waves-light light-blue btn-large">Create your first course</a>
+            <a href="{{ url_for('course.delete', school_id=school.id) }}" class="waves-effect waves-light light-blue btn-large">Create your first course</a>
             {% endif %}
         </div>
     </div>
