User blueprint added

--- a/digicubes_flask/web/templates/account/index.jinja
+++ b/digicubes_flask/web/templates/account/index.jinja
@@ -21,7 +21,7 @@
 {% endblock %}
 
 {% block sub_menu %}
-  <li><a href="{{url_for('admin.create_user')}}">Setup</a></li>
+  <li><a href="{{url_for('user.create')}}">Setup</a></li>
 {% endblock %}
 
 
