--- a/digicubes_flask/web/templates/admin/base.jinja
+++ b/digicubes_flask/web/templates/admin/base.jinja
@@ -1,14 +1,27 @@
 
 {% extends "page_base.jinja" %}
 
-{% block space_name %}Admin{% endblock %}
+{% block space_name %}Home{% endblock %}
 
 {% block main_menu %}
   <li><a href="{{ url_for('account.home') }}">Home</a></li>
+
+  {% if has_right('user_read') %}
   <li><a href="{{ url_for('user.get_all') }}">User</a></li>
+  {% endif %}
+
+  {% if has_right('role_read') %}
   <li><a href="{{ url_for('admin.roles') }}">Roles</a></li>
+  {% endif %}
+  
+  {% if has_right('right_read') %}
   <li><a href="{{ url_for('admin.rights') }}">Rights</a></li>
+  {% endif %}
+  
+  {% if has_right('school_read') %}
   <li><a href="{{ url_for('school.get_all') }}">Schools</a></li>
+  {% endif %}
+  
   <li><a href="{{ url_for('account.logout') }}">Logout</a></li>
 {% endblock %}
 
