--- a/digicubes_flask/web/templates/admin/course.jinja
+++ b/digicubes_flask/web/templates/admin/course.jinja
@@ -1,4 +1,5 @@
 {% extends "admin/base.jinja" %}
+{% import "macros/menu.jinja" as menu %}
 
 
 {% block page_title %}
@@ -13,22 +14,15 @@ Course Details
 </div>
 {% endmacro %}
 
-{% macro menu_button(url, label) %}
-    <a href="{{ url }}" class="waves-effect waves-light btn-small light-blue">{{ label }}</a>
-{% endmacro %}
-
-{% macro menu_button_plain(url, label) %}
-    <a class="dc-menu-item" href="{{ url }}">{{ label }}</a>
-{% endmacro %}
-
 {% block main_content %}
 {# The page menu #}
 <div class="section">
     <div class="row">
         <div class="col s12">
-            {{ menu_button(url_for('school.get', school_id=school.id), school.name) }}
-            {{ menu_button(url_for('course.update', school_id=school.id, course_id=course.id), "Edit Course") }}
-            {{ menu_button(url_for('unit.create', school_id=school.id, course_id=course.id), "New Unit") }}
+            {{ menu.button(url_for('school.get', school_id=school.id), school.name) }}
+            {{ menu.button(url_for('school.get_school_teacher', school_id=school.id), "Show Teacher") }}
+            {{ menu.button(url_for('course.update', school_id=school.id, course_id=course.id), "Edit Course") }}
+            {{ menu.button(url_for('unit.create', school_id=school.id, course_id=course.id), "New Unit") }}
         </div>
     </div>
 </div>
