--- a/digicubes_flask/web/templates/admin/schools.jinja
+++ b/digicubes_flask/web/templates/admin/schools.jinja
@@ -1,4 +1,5 @@
 {% extends "admin/base.jinja" %}
+{% import "macros/menu.jinja" as menu %}
 
 {% block page_title %}
 Schools Overview
@@ -13,8 +14,8 @@ Schools Overview
 {% block main_content %}
 <div class="section">
     <div class="row">
-        <div class="col s12 dc-menu">
-            <a class="dc-menu-item" href="{{url_for('school.create')}}">New School</a>
+        <div class="col s12">
+            {{ menu.button(url_for('school.create'), "New School") }}
         </div>
     </div>
 
