--- a/digicubes_flask/web/templates/school/school.jinja
+++ b/digicubes_flask/web/templates/school/school.jinja
@@ -88,6 +88,12 @@ School
             {{ teacher }}
         </div>
     </div>
+    {% else %}
+    <div class="row">
+        <div class="col s12">
+            No Teacher so far
+        </div>
+    </div>
     {% endif %}
 </div>
 
