--- a/digicubes_flask/web/templates/unit/unit.jinja
+++ b/digicubes_flask/web/templates/unit/unit.jinja
@@ -1,4 +1,19 @@
 {% extends "admin/base.jinja" %}
+{% import "macros/menu.jinja" as menu %}
+
+{% macro info_row(label, value) %}
+<div class="row"  style="margin-bottom: 5px !important">
+    <div class="col s2">{{ label }}:</div>
+    <div class="col s10">{{ value }}</div>
+</div>
+{% endmacro %}
+
+{% macro info_link_row(label, value, url) %}
+<div class="row"  style="margin-bottom: 5px !important">
+    <div class="col s2">{{ label }}:</div>
+    <div class="col s10"><a href="{{ url }}">{{ value }}</a></div>
+</div>
+{% endmacro %}
 
 {% block page_title %}{{ unit.name }}{% endblock %}
 {% block space_name %}{{ unit.name }}{% endblock %}
@@ -7,20 +22,22 @@
 {% block main_content %}
 <div class="section">
   <div class="row">
-    <div class="col s12 dc-menu">
-      <a class="dc-menu-item" href="{{ url_for('school.get', school_id=school.id) }}">{{ school.name }}</a>            
-      <a href="{{ url_for('course.get', school_id=school.id, course_id=course.id) }}">{{ course.name | nonefilter }}</a>
-      <a href="{{ url_for('unit.update', school_id=school.id, course_id=course.id, unit_id=unit.id) }}">Edit</a>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col s12" id="dc_main">
-      <h5>{{ unit.short_description }}</h6>
-      <p>{{ unit.long_description | md }}</p>
-
+    <div class="col s12">
+      {{ menu.button(url_for('unit.update', school_id=school.id, course_id=course.id, unit_id=unit.id), "Edit") }}
     </div>
   </div>
 </div>
+
+{# Header info for this unit #}
+<div class="section">
+    {{ info_link_row("Schule", school.name, url_for('school.get', school_id=school.id)) }}
+    {{ info_link_row("Kurs", course.name, url_for('course.get', school_id=school.id, course_id=course.id)) }}
+    {{ info_row("Unit Name", unit.name) }}
+    {{ info_row("Kurz Beschreibung", md(unit.short_description)) }}
+    {{ info_row("Lang Beschreibung", md(unit.long_description)) }}
+    {{ info_row("Angelegt am", unit.created_at) }}
+    {{ info_row("Zuletzt geändert", unit.modified_at) }}
+</div>
+
 {% endblock %}   
 
