--- a/digicubes_flask/web/templates/course/course.jinja
+++ b/digicubes_flask/web/templates/course/course.jinja
@@ -1,5 +1,6 @@
 {% extends "admin/base.jinja" %}
 {% import "macros/menu.jinja" as menu %}
+{% import "macros/object_info.jinja" as info %}
 
 
 {% block page_title %}
@@ -19,7 +20,6 @@ Course Details
 <div class="section">
     <div class="row">
         <div class="col s12">
-            {{ menu.button(url_for('school.get', school_id=school.id), school.name) }}
             {{ menu.button(url_for('school.get_school_teacher', school_id=school.id), "Show Teacher") }}
             {{ menu.button(url_for('course.update', school_id=school.id, course_id=course.id), "Edit Course") }}
             {{ menu.button(url_for('unit.create', school_id=school.id, course_id=course.id), "New Unit") }}
@@ -29,14 +29,14 @@ Course Details
 
 {# Header info for this unit #}
 <div class="section">
-    {{ info_row("Schule", school.name) }}
-    {{ info_row("Kursname", course.name) }}
-    {{ info_row("Beschreibung", md(course.description)) }}
-    {{ info_row("Angelegt durch", creator.login) }}
-    {{ info_row("Angelegt am", course.created_at) }}
-    {{ info_row("Zuletzt geändert", course.modified_at) }}
-    {{ info_row("Startdatum", course.from_date) }}
-    {{ info_row("Enddatum", course.until_date) }}
+    {{ info.link_row("Schule", school.name, url_for('school.get', school_id=school.id)) }}
+    {{ info.row("Kursname", course.name) }}
+    {{ info.row("Beschreibung", md(course.description)) }}
+    {{ info.row("Angelegt durch", creator.login) }}
+    {{ info.row("Angelegt am", course.created_at) }}
+    {{ info.row("Zuletzt geändert", course.modified_at) }}
+    {{ info.row("Startdatum", course.from_date) }}
+    {{ info.row("Enddatum", course.until_date) }}
 </div>
 
 <div class="section">
